@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<Bullet>
 }

abstract class AbstractBullet
{
    - power:int
    + AbstractBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

abstract class AbstractSupply
{
    + AbstractSupply(int locationX, int locationY, int speedX, int speedY, int power)
    + {abstract} getSupply(HeroAircraft Hero):void
    + forward():void
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- AbstractBullet
AbstractFlyingObject <|-- AbstractSupply

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- BossEnemy

AbstractBullet <|-- HeroBullet
AbstractBullet <|-- EnemyBullet

AbstractSupply <|-- HPSupply
AbstractSupply <|-- BulletSupply
AbstractSupply <|-- BombSupply

class HeroAircraft {
    - shootNum:int
    - power:int
    - direction:int
    - {static}hero:HeroAircraft

    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static}getInstance():HeroAircraft
    + forward():void
    + shoot():List<Bullet>
    + addHP(int AddHP):void

}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<AbstractBullet>
}

class EliteEnemy {
    - power:int
    - direction:int
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<AbstractBullet>
}

class BossEnemy {
    - shootNum:int
    - power:int
    - direction:int
    + BossEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + shoot():List<AbstractBullet>
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class HPSupply{
    - int addHP
    + HPSupply(int locationX, int locationY,
     int speedX, int speedY, int addHP)
    + HPSupply(int locationX, int locationY,
     int speedX, int speedY)
    + getSupply(HeroAircraft Hero):void
}

class BulletSupply{
    - int addBullet
    + BulletSupply(int locationX, int locationY,
     int speedX, int speedY)
    + BulletSupply(int locationX, int locationY,
          int speedX, int speedY, int addBullet)
    + getSupply(HeroAircraft Hero):void
}

class BombSupply{
    + BombSupply(int locationX, int locationY,
     int speedX, int speedY)
    + getSupply(HeroAircraft Hero):void
}

Interface SupplyFactory{
    + createSupply():AbstractSupply
}

abstract class AbstractSupply
{
    + AbstractSupply(int locationX, int locationY, int speedX, int speedY, int power)
    + {abstract} getSupply(HeroAircraft Hero):void
    + forward():void
}
SupplyFactory <|... HPSupplyFactory
SupplyFactory <|... BulletSupplyFactory
SupplyFactory <|... BombSupplyFactory
SupplyFactory..left.>AbstractSupply

HPSupplyFactory ...> HPSupply
BulletSupplyFactory ...> BulletSupply
BombSupplyFactory ...> BombSupply
EnemyAircraftFactory..left.>AbstractAircraft

class HPSupplyFactory{
    + createSupply():AbstractSupply
}

class BulletSupplyFactory{
    + createSupply():AbstractSupply
}

class BombSupplyFactory{
    + createSupply():AbstractSupply
}
class MobAircraftFactory{
    + createEnemyAircraft():AbstractAircraft
}
class EliteAircraftFactory{
    + createEnemyAircraft():AbstractAircraft
}

class BossAircraftFactory{
    + createEnemyAircraft():AbstractAircraft
}
EnemyAircraftFactory <|... MobAircraftFactory
EnemyAircraftFactory <|... EliteAircraftFactory
EnemyAircraftFactory <|... BossAircraftFactory
Interface EnemyAircraftFactory{
    + createEnemyAircraft():AbstractAircraft
}
MobAircraftFactory ...> MobEnemy
EliteAircraftFactory ...> EliteEnemy
BossAircraftFactory ...> BossEnemy
@enduml